# approx-gnn

./: README.md  dataset.py  dse.py  evaluate.py  requirements.txt  train.py
approxgnn/: .gitignore  VerilogParser.g4  __init__.py  _setup.sh  convert.py  dse.py  evaluation.py  generate.py  io_utils.py  models.py  training.py  utils.py
components/adders/12_unsigned/pareto_pwr_mse/: add12u_013.c  add12u_04U.c  add12u_0HR.c  add12u_0T9.c  add12u_0XY.c  add12u_19A.c  add12u_1KC.c  add12u_2L7.c  add12u_2MB.c  add12u_2X6.c
components/adders/16_unsigned/pareto_pwr_mse/: add16u_0DL.c  add16u_0KC.c  add16u_0M0.c  add16u_0M6.c  add16u_0MH.c  add16u_0NK.c  add16u_0Q7.c  add16u_0QC.c  add16u_0QG.c  add16u_1E2.c
components/adders/8_unsigned/pareto_pwr_mse/: add8u_0CA.c  add8u_0FP.c  add8u_0H4.c  add8u_2XT.c  add8u_4T8.c  add8u_5EZ.c  add8u_5EZ.v  add8u_5M7.c  add8u_5M7.v  add8u_5NH.c  add8u_5NH.v  add8u_5R3.c  add8u_5R3.v  add8u_88L.c  add8u_8ES.c
data/16k/: _eval.tsv  results.csv
data/large_gauss/: _eval.tsv  results.csv
data/small_gauss/: _eval.tsv  results.csv
pretrained/critical/: best_regress.pt  config.json  eval_results.json
pretrained/embed/: best_embed.pt  best_regress.pt  config.json  eval_results.json
qor_evaluation/: .gitignore  CMakeLists.txt  Makefile
qor_evaluation/src/: common.hpp  configs.hpp  main.cpp  utils.cpp  utils.hpp
